fix: use css variables for dark mode styling
(cherry picked from commit 0ce4d55b917e093a36851d04f617fe4c81eaa458)

--- a/hrms/public/scss/hierarchy_chart.scss
+++ b/hrms/public/scss/hierarchy_chart.scss
@@ -311,15 +311,15 @@
 
 [data-theme="dark"] {
 	.node-card {
-		background-color: #232323 !important;
-		color: #fff !important;
+		background-color: var(--gray-800);
+		color: var(--text-on-gray);
 
 		.avatar-frame {
-			background-color: #171717 !important;
+			background-color: var(--gray-700);
 		}
 
-		.es-icon {
-			stroke: #171717 !important;
+		.node-edit-icon > .icon {
+			fill: var(--gray-700);
 		}
 	}
 }
